# OGCtoLocal

./: CMakeLists.txt  README.md  package.xml
launch/: kml_parser.launch.py
launch/config/: config.rviz
src/: kml_parser.cpp
